--- a/playbooks/bootstrap.yml
+++ b/playbooks/bootstrap.yml
@@ -1,6 +1,5 @@
 ---
-  - hosts: minecraft
-    remote_user: root
+  - hosts: all
 
     tasks:
       - name: Make sure we have sudo installed
@@ -46,10 +45,6 @@
           line: "PasswordAuthentication no"
         notify: restart ssh
 
-#      - name: Set Hostname
-#        hostname:
-#          name: {{ hostname }}
-
       - name: Install Firewalld
         yum:
           name: firewalld
@@ -67,22 +62,6 @@
           - net.ipv6.conf.all.disable_ipv6
           - net.ipv6.conf.default.disable_ipv6
           - net.ipv6.conf.lo.disable_ipv6
-
-      - name: Patch all packages
-        yum:
-          name: "*"
-          state: latest
-
-      - name: Remove Sendmail
-        yum:
-          name: sendmail
-          state: absent
-
-      - name: Remove apache
-        yum:
-          name: httpd
-          state: absent
-
 
     handlers:
       - name: restart ssh
