various changes and new hosts in Dallas

--- a/playbooks/bootstrap.yml
+++ b/playbooks/bootstrap.yml
@@ -24,6 +24,7 @@
         user: 
           name: jfmatth
           group: wheel
+          shell: /bin/bash
 
       - name: Put Jfmatth SSH key on server
         authorized_key:
