update for more generic key location

--- a/playbooks/bootstrap.yml
+++ b/playbooks/bootstrap.yml
@@ -30,7 +30,7 @@
         authorized_key:
           user: jfmatth
           state: present
-          key:  "{{ lookup('file', '/home/jfmatth/.ssh/id_rsa.pub') }}"
+          key:  "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
 
       - name: Don't allow root to SSH in
         lineinfile:
